[gd_scene load_steps=5 format=2]

[ext_resource path="res://scene/Battle/Battle.gd" type="Script" id=1]
[ext_resource path="res://scene/Battle/BattleCharacter.tscn" type="PackedScene" id=2]
[ext_resource path="res://font/font_siteName.tres" type="DynamicFont" id=3]
[ext_resource path="res://scene/Battle/StateUI.tscn" type="PackedScene" id=4]

[node name="Battle" type="Node2D"]
script = ExtResource( 1 )

[node name="characters" type="Node2D" parent="."]
editor/display_folded = true

[node name="player" parent="characters" instance=ExtResource( 2 )]
position = Vector2( 283.165, 404.975 )

[node name="enemy" parent="characters" instance=ExtResource( 2 )]
position = Vector2( 965.732, 397.987 )

[node name="jumpNumberPlace" type="Node2D" parent="."]

[node name="ui" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_lock_": true
}

[node name="Label3" type="Label" parent="ui"]
margin_left = 607.0
margin_top = 85.0
margin_right = 654.0
margin_bottom = 110.0
custom_fonts/font = ExtResource( 3 )
text = "vs"

[node name="playerStateUI" parent="ui" instance=ExtResource( 4 )]

[node name="enemyStateUI" parent="ui" instance=ExtResource( 4 )]
margin_left = 714.0
margin_top = 3.0
margin_right = 754.0
margin_bottom = 43.0

